--- a/galeria/templates/galeria/lista_productos.html
+++ b/galeria/templates/galeria/lista_productos.html
@@ -60,7 +60,7 @@
             <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'lista_productos' %}">Obras Publicadas</a>
+            <a class="nav-link" href="{% url 'lista_productos' %}">Listado de Productos</a>
           </li>
           {% endif %}
           {% endif %}
@@ -174,11 +174,11 @@
           <p class="text-center">No se encontraron productos.</p>
           {% endif %}
         </div>
+      </div>
+    </div>
 
 
-
-        <script src="{% static 'JavaScript/script.js' %}"></script>
-
+    <script src="{% static 'JavaScript/script.js' %}"></script>
 
 
 
