--- a/galeria/templates/galeria/registro.html
+++ b/galeria/templates/galeria/registro.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% load static %}
+{% load static %}
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,37 +54,38 @@
             <a class="nav-link" href="{% url 'perfil' %}">Perfil</a>
           </li>
           {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
-                </li>
-                {% endif %}
-            </ul>
-            <div class="d-flex align-items-center">
-                <p class="mb-0 me-3">
-                    {% if user.is_authenticated %}
-                    Bienvenid@ {{ user.username }}
-                    {% endif %}
-                </p>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-3" type="search" placeholder="Buscar" aria-label="Search">
-                </form>
-            </div>
-            <div>
-                {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary">Salir de la sesión</button></a>
-                {% else %}
-                <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar Sesión</button></a>
-                <a href="{% url 'registro' %}"><button class="btn btn-secondary ml-2" type="submit">Registrarse</button></a>
-                {% endif %}
-            </div>
-            <div>
-                <a class="navbar-brand Carro" href="{% url 'index' %}">
-                    <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
-                </a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'lista_productos' %}">Panel Administrador</a>
+          </li>
+          {% endif %}
+        </ul>
+        <div class="d-flex align-items-center">
+          <p class="mb-0 me-3">
+            {% if user.is_authenticated %}
+            Bienvenid@ {{ user.username }}
+            {% endif %}
+          </p>
+          <form class="d-flex" role="search">
+            <input class="form-control me-3" type="search" placeholder="Buscar" aria-label="Search">
+          </form>
         </div>
+        <div>
+          {% if user.is_authenticated %}
+          <a href="{% url 'logout' %}"><button class="btn btn-outline-secondary">Salir de la sesión</button></a>
+          {% else %}
+          <a href="{% url 'login' %}"><button class="btn btn-outline-secondary" type="submit">Iniciar
+              Sesión</button></a>
+          <a href="{% url 'registro' %}"><button class="btn btn-secondary ml-2" type="submit">Registrarse</button></a>
+          {% endif %}
+        </div>
+        <div>
+          <a class="navbar-brand Carro" href="{% url 'index' %}">
+            <img src="{% static 'img/carrito.png' %}" alt="Carro" width="35" height="35" class="d-inline-block">
+          </a>
+        </div>
+      </div>
     </div>
-</nav>
+  </nav>
 
 
 
@@ -95,45 +97,49 @@
   <!--Formulario de registro-->
 
   <div class="login bg-light rounded shadow-sm">
-      <div class="container">
-        <p>Ingrese todos los datos en el siguiente formulario para registro</p>
+    <div class="container">
+      <p>Ingrese todos los datos en el siguiente formulario para registro</p>
 
-        <form  method="post">
-          {% csrf_token %}
-          
-          <div class="mb-3">
-            <input type="text" class="form-control" id="{{ form.nombre.id_for_label }}" placeholder="Ingresa tu Nombre" name="{{ form.nombre.html_name }}" required>
-          </div>
-          
-          <div class="mb-3">
-            <input type="text" class="form-control" id="{{ form.apellido.id_for_label }}" placeholder="Ingresa tu apellido" name="{{ form.apellido.html_name }}" required>
-          </div>
-          
-          <div class="mb-3">
-            <input type="email" class="form-control" id="{{ form.correo.id_for_label }}" placeholder="Correo" name="{{ form.correo.html_name }}">
-          </div>
-          
-          <div class="mb-3">
-            <input type="password" class="form-control" placeholder="Contraseña" id="{{ form.clave.id_for_label }}" name="{{ form.clave.html_name }}" required>
-          </div>
-          
-          <button type="submit" class="btn btn-secondary">Registrar</button>
+      <form method="post">
+        {% csrf_token %}
 
-          {% if form.errors %}
-            <div class="alert alert-danger mt-3">
-              <ul>
-                {% for field in form %}
-                  {% for error in field.errors %}
-                    <li>{{ error }}</li>
-                  {% endfor %}
-                {% endfor %}
-              </ul>
-            </div>
-          {% endif %}
-        </form>
+        <div class="mb-3">
+          <input type="text" class="form-control" id="{{ form.nombre.id_for_label }}" placeholder="Ingresa tu Nombre"
+            name="{{ form.nombre.html_name }}" required>
+        </div>
 
-      
-  </div>
+        <div class="mb-3">
+          <input type="text" class="form-control" id="{{ form.apellido.id_for_label }}"
+            placeholder="Ingresa tu apellido" name="{{ form.apellido.html_name }}" required>
+        </div>
+
+        <div class="mb-3">
+          <input type="email" class="form-control" id="{{ form.correo.id_for_label }}" placeholder="Correo"
+            name="{{ form.correo.html_name }}">
+        </div>
+
+        <div class="mb-3">
+          <input type="password" class="form-control" placeholder="Contraseña" id="{{ form.clave.id_for_label }}"
+            name="{{ form.clave.html_name }}" required>
+        </div>
+
+        <button type="submit" class="btn btn-secondary">Registrar</button>
+
+        {% if form.errors %}
+        <div class="alert alert-danger mt-3">
+          <ul>
+            {% for field in form %}
+            {% for error in field.errors %}
+            <li>{{ error }}</li>
+            {% endfor %}
+            {% endfor %}
+          </ul>
+        </div>
+        {% endif %}
+      </form>
+
+
+    </div>
   </div>
 
 
@@ -154,10 +160,11 @@
       </div>
       <div class="col">
         <a class="navbar-brand logo" href="{% url 'index' %}">
-            <img src="{% static 'img/log.png' %}" alt="Logo" width="100" height="40" class="d-inline-block" style="margin-top: -10px;">
+          <img src="{% static 'img/log.png' %}" alt="Logo" width="100" height="40" class="d-inline-block"
+            style="margin-top: -10px;">
         </a>
-    </div>
-    
+      </div>
+
       <div class="col">
         <a class="linkfooter" href="">Ayuda</a>
       </div>
@@ -167,7 +174,7 @@
     </div>
   </div>
   <hr class="solid">
-  
+
   <!-- Grid container -->
   <div class="container pt-4  col-lg-6 px-5">
     <!-- Section: Social media -->
@@ -229,6 +236,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
   integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 
-</html>
-  
 
+</html>
