--- a/galeria/templates/galeria/registro.html
+++ b/galeria/templates/galeria/registro.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/dc663d69b4.js" crossorigin="anonymous"></script>
@@ -114,8 +115,9 @@
         </div>
 
         <div class="mb-3">
-          <input type="email" class="form-control" id="{{ form.correo.id_for_label }}" placeholder="Correo"
+          <input type="email" class="form-control validarEmail" id="{{ form.correo.id_for_label }}" placeholder="Correo"
             name="{{ form.correo.html_name }}">
+          <p id="resultApi"></p>
         </div>
 
         <div class="mb-3">
@@ -142,7 +144,7 @@
     </div>
   </div>
 
-
+  <script src="{% static 'javaScript/api.js' %}"></script>
 </body>
 
 
